Mirroring upstream changes to MAKEFILE individual dependencies (2016-03-10).

--- a/src/MAKE/MACHINES/Makefile.curie
+++ b/src/MAKE/MACHINES/Makefile.curie
@@ -103,5 +103,10 @@ lib:	$(OBJ) $(EXTRA_LINK_DEPENDS)
 
 # Individual dependencies
 
-DEPENDS = $(OBJ:.o=.d)
-include $(DEPENDS)
+depend : fastdep.exe $(SRC)
+	@./fastdep.exe $(EXTRA_INC) -- $^ > .depend || exit 1
+
+fastdep.exe: ../DEPEND/fastdep.c
+	cc -O -o $@ $<
+
+sinclude .depend
