--- a/src/MAKE/MACHINES/Makefile.hartree
+++ b/src/MAKE/MACHINES/Makefile.hartree
@@ -36,5 +36,10 @@ $(EXE): $(OBJ)
 
 # Individual dependencies
 
-DEPENDS = $(OBJ:.o=.u)
-include $(DEPENDS)
+depend : fastdep.exe $(SRC)
+	@./fastdep.exe $(EXTRA_INC) -- $^ > .depend || exit 1
+
+fastdep.exe: ../DEPEND/fastdep.c
+	cc -O -o $@ $<
+
+sinclude .depend
